--- a/less/template.less
+++ b/less/template.less
@@ -1,83 +1,83 @@
 // CSS Reset
-@import "../../../apptheme/media/jui/less/reset.less";
+@import "../../../../media/jui/less/reset.less";
 
 // Core variables and mixins
 @import "variables.less"; // Custom for this template
-@import "../../../apptheme/media/jui/less/mixins.less";
+@import "../../../../media/jui/less/mixins.less";
 
 // Grid system and page structure
-@import "../../../apptheme/media/jui/less/scaffolding.less";
-@import "../../../apptheme/media/jui/less/grid.less";
-@import "../../../apptheme/media/jui/less/layouts.less";
+@import "../../../../media/jui/less/scaffolding.less";
+@import "../../../../media/jui/less/grid.less";
+@import "../../../../media/jui/less/layouts.less";
 
 // Base CSS
-@import "../../../apptheme/media/jui/less/type.less";
-@import "../../../apptheme/media/jui/less/code.less";
-@import "../../../apptheme/media/jui/less/forms.less";
-@import "../../../apptheme/media/jui/less/tables.less";
+@import "../../../../media/jui/less/type.less";
+@import "../../../../media/jui/less/code.less";
+@import "../../../../media/jui/less/forms.less";
+@import "../../../../media/jui/less/tables.less";
 
 // Components: common
-// @import "../../../apptheme/media/jui/less/sprites.less";
-@import "../../../apptheme/media/jui/less/dropdowns.less";
-@import "../../../apptheme/media/jui/less/wells.less";
-@import "../../../apptheme/media/jui/less/component-animations.less";
-@import "../../../apptheme/media/jui/less/close.less";
+// @import "../../../../media/jui/less/sprites.less";
+@import "../../../../media/jui/less/dropdowns.less";
+@import "../../../../media/jui/less/wells.less";
+@import "../../../../media/jui/less/component-animations.less";
+@import "../../../../media/jui/less/close.less";
 
 // Components: Buttons & Alerts
-@import "../../../apptheme/media/jui/less/buttons.less";
-@import "../../../apptheme/media/jui/less/button-groups.less";
-@import "../../../apptheme/media/jui/less/alerts.less"; // Note: alerts share common CSS with buttons and thus have styles in buttons.less
+@import "../../../../media/jui/less/buttons.less";
+@import "../../../../media/jui/less/button-groups.less";
+@import "../../../../media/jui/less/alerts.less"; // Note: alerts share common CSS with buttons and thus have styles in buttons.less
 
 // Components: Nav
-@import "../../../apptheme/media/jui/less/navs.less";
-@import "../../../apptheme/media/jui/less/navbar.less";
-@import "../../../apptheme/media/jui/less/breadcrumbs.less";
-@import "../../../apptheme/media/jui/less/pagination.less";
-@import "../../../apptheme/media/jui/less/pager.less";
+@import "../../../../media/jui/less/navs.less";
+@import "../../../../media/jui/less/navbar.less";
+@import "../../../../media/jui/less/breadcrumbs.less";
+@import "../../../../media/jui/less/pagination.less";
+@import "../../../../media/jui/less/pager.less";
 
 // Components: Popovers
-@import "../../../apptheme/media/jui/less/modals.less";
-@import "../../../apptheme/media/jui/less/tooltip.less";
-@import "../../../apptheme/media/jui/less/popovers.less";
+@import "../../../../media/jui/less/modals.less";
+@import "../../../../media/jui/less/tooltip.less";
+@import "../../../../media/jui/less/popovers.less";
 
 // Components: Misc
-@import "../../../apptheme/media/jui/less/thumbnails.less";
-@import "../../../apptheme/media/jui/less/labels-badges.less";
-@import "../../../apptheme/media/jui/less/progress-bars.less";
-@import "../../../apptheme/media/jui/less/accordion.less";
-@import "../../../apptheme/media/jui/less/carousel.less";
-@import "../../../apptheme/media/jui/less/hero-unit.less";
+@import "../../../../media/jui/less/thumbnails.less";
+@import "../../../../media/jui/less/labels-badges.less";
+@import "../../../../media/jui/less/progress-bars.less";
+@import "../../../../media/jui/less/accordion.less";
+@import "../../../../media/jui/less/carousel.less";
+@import "../../../../media/jui/less/hero-unit.less";
 
 // Utility classes
-@import "../../../apptheme/media/jui/less/utilities.less";
+@import "../../../../media/jui/less/utilities.less";
 
 // RESPONSIVE CLASSES
 // ------------------
 
-@import "../../../apptheme/media/jui/less/responsive-utilities.less";
+@import "../../../../media/jui/less/responsive-utilities.less";
 
 
 // MEDIA QUERIES
 // ------------------
 
 // Phones to portrait tablets and narrow desktops
-@import "../../../apptheme/media/jui/less/responsive-767px-max.less";
+@import "../../../../media/jui/less/responsive-767px-max.less";
 
 // Tablets to regular desktops
-@import "../../../apptheme/media/jui/less/responsive-768px-979px.less";
+@import "../../../../media/jui/less/responsive-768px-979px.less";
 
 // Large desktops
-@import "../../../apptheme/media/jui/less/responsive-1200px-min.less";
+@import "../../../../media/jui/less/responsive-1200px-min.less";
 
 
 // RESPONSIVE NAVBAR
 // ------------------
 
 // From 979px and below, show a button to toggle navbar contents
-@import "../../../apptheme/media/jui/less/responsive-navbar.less";
+@import "../../../../media/jui/less/responsive-navbar.less";
 
 // Extended for JUI
-@import "../../../apptheme/media/jui/less/bootstrap-extended.less"; // Has to be last to override when necessary
+@import "../../../../media/jui/less/bootstrap-extended.less"; // Has to be last to override when necessary
 
 // Icon Font
 @import "icomoon.less";
