--- a/less/admin.less
+++ b/less/admin.less
@@ -117,6 +117,12 @@
 		}
 	}
 }
+// Active Buttons in tables
+table {
+	.btn-micro.active {
+		.buttonBackground(@greenSea, @greenSea);
+	}
+}
 @media (max-width: @tabletMax) {
 	.container-fixed {
 		.content-inner #j-sidebar-container {
